--- a/miscellaneous_pages/search_postit_files/saved_resource.html
+++ b/miscellaneous_pages/search_postit_files/saved_resource.html
@@ -540,6 +540,7 @@
                 margin: 0px;
             }
             .eEZUpc {
+                display: none:
                 box-sizing: border-box;
                 margin-bottom: 48px;
                 width: 303.61px;
@@ -584,6 +585,7 @@
                 color: rgb(255, 255, 255);
             }
             .dRciPD {
+                display: none;
                 box-sizing: border-box;
                 margin-top: 32px;
             }
@@ -8636,6 +8638,6 @@
 					productsList.style.display = 'none';
 				}
 			};
-        </script>
+        </script>          
     </body>
 </html>
