Change index title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
-        <title>Hello, world!</title>
+        <title>MegaHack Woman: Desafio Olist</title>
 
         <style>
             body {
@@ -57,13 +57,18 @@
             a {
                 color: white;
             }
+
+            a:hover {
+                text-decoration: none;
+                color: lightgrey;
+            }
         </style>
     </head>
     <body>
         <div class="jumbotron card card-image">
             <div class="text-white text-center py-5 px-4">
                 <div>
-                    <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>MegaHack Woman: Desafio Olist</strong></h2>
+                    <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>MegaHack Woman: Desafio Olist (Time 9)</strong></h2>
                     <p class="bold">A página a seguir é uma versão simulada da aba de produtos da Olist</p>
                     <p class="mx-5 mb-5 bold">Para testar este mockup, siga os seguintes passos:</p>
 
